--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sba-frontend",
+  "name": "assignment2Proj",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
-    "build": "ng build",
+    "build": "ng build --prod --aot",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
